# cmake_examples

ex1/proj/: CMakeLists.txt
ex1_hello/proj/: hello.cpp
ex2_lib/proj/: CMakeLists.txt
ex2_lib/tmp/: CMakeCache.txt  Makefile  cmake_install.cmake
ex4_my_play/src/: CMakeLists.txt  main.cpp
ex4_my_play/tmp/: run_cmake.sh
ex_01_hello/tmp/: run_cmake.sh
ex_05_myconfig/src/: CMakeLists.txt
ex_06_somlibs/: note.txt
ex_06_somlibs/imp/app/src/private/: main.cpp
ex_06_somlibs/imp/lib_b/: CMakeLists.txt
ex_06_somlibs/imp/lib_b/src/private/: lib_b1.cpp  lib_b2.cpp
ex_07_version_generation/: note.txt
ex_07_version_generation/src/: CMakeLists.txt  main.cpp
ex_08_code_generation/generator/: generator.sh
ex_09_cppcheck_1/: readme.txt
ex_09_cppcheck_1/config/: config.cmake
ex_09_cppcheck_1/imp/: CMakeLists.txt
ex_09_cppcheck_1/imp/lib_a/src/private/: lib_a2.cpp
ex_09_cppcheck_1/zbash/: build-all.sh
ex_10_cppcheck_2/config/: my_macro.cmake
ex_10_cppcheck_2/imp/: CMakeLists.txt
ex_10_cppcheck_2/imp/app/: CMakeLists.txt
ex_10_cppcheck_2/imp/lib_a/: CMakeLists.txt
ex_10_cppcheck_2/imp/lib_a/src/private/: lib_a1.cpp  run_cppcheck.sh
ex_10_cppcheck_2/imp/lib_a/src/private/lint/: report.txt
ex_10_cppcheck_2/imp/lib_b/: CMakeLists.txt
ex_10_cppcheck_2/imp/lib_b/src/: lib_b.hpp
ex_10_cppcheck_2/lint/: report.txt
ex_11_gtest/: note.txt
ex_11_gtest/imp/: CMakeLists.txt
ex_11_gtest/imp/app/: CMakeLists.txt
ex_11_gtest/imp/app/src/: main.hpp
ex_11_gtest/imp/app/src/private/: main.cpp
ex_11_gtest/imp/lib_a/src/: lib_a.hpp
ex_11_gtest/imp/lib_a/src/private/: lib_v.cpp
ex_11_gtest/imp/test/: CMakeLists.txt  v_test.cpp
ex_3_subproj/proj/: CMakeLists.txt
ex_3_subproj/tmp/: CMakeCache.txt  Makefile  cmake_install.cmake  main
ex_3_subproj/tmp/foo/: Makefile  cmake_install.cmake
ex_6_some_libs/config/: config.cmake
ex_6_some_libs/imp/: CMakeLists.txt
ex_6_some_libs/imp/app/: CMakeLists.txt
ex_6_some_libs/imp/lib_a/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  install_manifest.txt
ex_6_some_libs/imp/lib_a/src/private/: lib_a1.cpp  lib_a2.cpp
ex_6_some_libs/zbash/: create_liba.sh  main
ex_7_version_generation/src/: version.cpp  version.cpp.in
ex_7_version_generation/src/foo/: foo.cpp  foo.hpp
ex_8_code_generation/: note.txt
ex_8_code_generation/src/: CMakeLists.txt  main.cpp
ex_8_code_generation/src/foo/: foo.cpp
ex_9_SCA/imp/: CMakeLists.txt
ex_9_SCA/imp/app/: CMakeLists.txt
ex_9_SCA/imp/lib_a/src/: lib_a.hpp
ex_9_SCA/zbash/: note.txt
